# Texture_Projection-Nodes

./: .gitignore  __init__.py  grid_nodes.py  install.py  pyproject.toml  render_nodes.py  requirements.txt  split_grids.py
Texture_Projection/Renderer/DifferentiableRenderer/: MeshRender.py  camera_utils.py  mesh_utils.py
Texture_Projection/Texture_Projection_utils/: nvdiffrast_utils.py  pipeline_utils.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/camera/: conversion.py  generator.py  rotation.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/geometry/triangle_topology/: topology.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/io/: mesh_loader.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/mesh/: structure.py  trimesh_utils.py  utils.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/render/nvdiffrast/: renderer_base.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/utils/: parse_color.py
Texture_Projection/Texture_Projection_utils/texkit/_vendor/video/: export_nvdiffrast_video.py
