[project]
name = "
Texture_Projection-Nodes"
description = "Custom Nodes for ComfyUI to Projects Texture into your 3D models."
version = "0.1.0"
license = "MIT"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
Repository = "https://github.com/Aero-Ex/Texture_Projection-Nodes"

[tool.comfy]
PublisherId = "aerox"
DisplayName = "Texture_Projection"
Icon = ""




